add jvmArgs to doctoolchain script to avoid warnings (#1150)
Co-authored-by: Max Hofer <mh182@chello.at>